@@ -15,14 +15,13 @@ $(PROJECT_INCLUDE)/rtems:
 	@$(mkinstalldirs) $@
 
 include_rtems_HEADERS = \
-    include/rtems/bdbuf.h  include/rtems/blkdev.h \
-    include/rtems/diskdevs.h  include/rtems/ramdisk.h
+    include/rtems/bdbuf.h include/rtems/blkdev.h \
+    include/rtems/diskdevs.h include/rtems/ramdisk.h
 
 PREINSTALL_FILES = $(PROJECT_INCLUDE)/rtems \
     $(include_rtems_HEADERS:include/%=$(PROJECT_INCLUDE)/%)
 
 all-local: $(PREINSTALL_FILES)
-
 
 EXTRA_DIST = README
 
